update functionality list course for student

--- a/views/list-students.hbs
+++ b/views/list-students.hbs
@@ -11,7 +11,7 @@
     <br>
     <h1>Listado de Cursos por Estudiantes</h1>
     <br>
-    <div class="center-block">
+    <div class="col-md-12">
         {{{mostrarCursosEst}}}
     </div>
 </div>
