--- a/views/view-course-updated.hbs
+++ b/views/view-course-updated.hbs
@@ -2,8 +2,8 @@
 {{> navbar }}
 <div class="container">
     <br>
-    <div class="alert alert-info alert-dismissible fade show" role="alert">
-        <span>{{crearCurso nombre codigo descripcion modalidad valor estado duracion}}
+     <div class="alert alert-info alert-dismissible fade show" role="alert">
+        <span>{{actualizarCurso codigo}}
         </span>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
