--- a/views/list-students.hbs
+++ b/views/list-students.hbs
@@ -1,13 +1,19 @@
 {{> head }}
 {{> navbar }}
-
-<div class="container">
+<div class="container"><br>
+    <div class="alert alert-info alert-dismissible fade show" role="alert">
+        <span>{{inscribirEstudiante documento nombre apellido correo telefono curso}}
+        </span>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <br>
     <div class="col-md-12"><br>
         <h1>Estudiantes</h1>
         <br>
         {{{mostrarEst}}}
     </div>
-
     <br>
     <h1>Listado de Cursos por Estudiantes</h1>
     <br>
@@ -16,7 +22,5 @@
     </div>
 </div>
 </div>
-
-
-
+<br><br><br><br>
 {{> footer }}
