--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -3,7 +3,6 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
@@ -14,6 +13,9 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/view-course">Ver Cursos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/update-course">Actualizar Curso</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/register">Inscribir</a>
