--- a/views/delete-student.hbs
+++ b/views/delete-student.hbs
@@ -1,8 +1,8 @@
 {{> head }}
 {{> navbar }}
 <div class="container"><br>
-    <div class="alert alert-warning alert-dismissible fade show" role="alert">
-        <span>{{inscribirEstudiante documento nombre apellido correo telefono curso}}
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <span>{{eliminarEstudiante documento}}
         </span>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
@@ -12,7 +12,7 @@
     <div class="col-md-12"><br>
         <h1>Estudiantes</h1>
         <br>
-        {{{mostrarEst}}}
+        {{{mostrarEstAct}}}
     </div>
 </div>
 </div>
