--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -6,19 +6,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="/">Inicio <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/"> Inicio |<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/create-course">Crear Curso</a>
+                <a class="nav-link" href="/create-course">Crear Curso  |</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/view-course">Ver Cursos</a>
+                <a class="nav-link" href="/view-course">Ver Cursos  |</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/update-course">Actualizar Curso</a>
+                <a class="nav-link" href="/update-course">Actualizar Curso  |</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/register">Inscribir</a>
+                <a class="nav-link" href="/register">Inscribir  |</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/list-students">Ver Inscritos</a>
