--- a/views/view-course-updated.hbs
+++ b/views/view-course-updated.hbs
@@ -2,7 +2,7 @@
 {{> navbar }}
 <div class="container">
     <br>
-     <div class="alert alert-info alert-dismissible fade show" role="alert">
+     <div class="alert alert-success alert-dismissible fade show" role="alert">
         <span>{{actualizarCurso codigo}}
         </span>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
