--- a/views/view-course.hbs
+++ b/views/view-course.hbs
@@ -3,7 +3,7 @@
 <div class="container">
     <br>
     <div class="alert alert-info alert-dismissible fade show" role="alert">
-        <span>{{crearCurso nombre codigo descripcion modalidad valor estado duracion}}
+        <span>{{{crearCurso nombre codigo descripcion modalidad valor estado duracion}}}
         </span>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
