--- a/views/list-students.hbs
+++ b/views/list-students.hbs
@@ -14,6 +14,11 @@
         <br>
         {{{mostrarEst}}}
     </div>
+    <div class="col-md-12"><br>
+        <h1>Cursos por Estudiantes Inscritos</h1>
+        <br>
+        {{{mostrarCursoEst}}}
+    </div>
 </div>
 </div>
 <br><br><br><br>
