--- a/views/register.hbs
+++ b/views/register.hbs
@@ -27,7 +27,7 @@
                 </div>
                 <div class="form-group col-md-4">
                     <label>Teléfono</label>
-                    <input type="text" name='telefono' class="form-control" placeholder="Teléfono">
+                    <input type="text" name='telefono' class="form-control" placeholder="Teléfono" required>
                 </div>
             <div class="form-group col-md-4">
                     <label>Cursos</label>
